Revert "Fix hover effects on mobile"
This reverts commit ced060835ed29bdf6e0bb2fb593a04e57a1b214a.

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -108,6 +108,16 @@ div[class*=box] {
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
+.btn:hover::before {
+	transform: rotate(180deg) scale(1.2, 1.2);
+	background-color: rgba(255, 255, 255, 0);
+}
+
+.btn:hover::after {
+	background-color: rgba(255, 255, 255, 0);
+	transform: rotate(180deg) scale(1.2, 1.2);
+}
+
 /* end button */
 
 @media only screen and (max-width: 1550px) {
